# AI-Powered-Incident-Response-Platform

./: .env.example  .gitignore  AGENT_CONTEXT.md  CONTRIBUTING.md  HOW_TO_RUN.md  README.md  pyproject.toml  rewrite_agent.py
frontend/: index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: Approvals.jsx  Credentials.jsx  FireAlert.jsx  IncidentDetail.jsx  IncidentList.jsx  Login.jsx
infra/: docker-compose.override.yml  docker-compose.yml
infra/loki/: loki-config.yaml  promtail-config.yaml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
learning/: phase_1_learning.md  phase_2_learning.md  phase_3_learning.md  phase_4_learning.md  phase_5_learning.md  phase_6_learning.md
services/alert-ingestor/: Dockerfile  main.py  normalizers.py  publisher.py
services/alert-ingestor/routes/: approvals.py  auth.py  credentials.py  dashboard.py  grafana.py  manual.py  prometheus.py  webhook.py
services/diagnosis-agent/: Dockerfile  __init__.py  agent.py  config.py  main.py  tools.py
services/mcp-servers/db/: Dockerfile  main.py
services/mcp-servers/k8s/: Dockerfile  main.py
services/mcp-servers/logs/: Dockerfile  main.py
services/mcp-servers/metrics/: Dockerfile  (+1 more)
services/remediation-agent/: Dockerfile  __init__.py  agent.py  approval.py  config.py  main.py
services/triage-agent/: Dockerfile  agent.py  config.py  embeddings.py  main.py
shared/: auth.py  config.py  credential_store.py  kafka_utils.py  logger.py  pg_client.py  redis_client.py  slack_notifier.py
shared/models/: alert.py  credentials.py  incident.py  runbook.py
(+2 files in other folders)
