# pyproject.toml
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "redis[asyncio]>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "confluent-kafka>=2.3",
    "anthropic>=0.25",
    "httpx>=0.27",
    "fastmcp>=0.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]